# sonance

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sonance/: __init__.py  _compat.py  audio_segment.py  exceptions.py  pcm.py
tests/: test_phase1.py
